--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,6 +7,6 @@
     <title>Hello World</title>
 </h:head>
 <h:body>
-    <h:outputText value="#{principal.getMensagem()}"/>
+    <h:outputText value="#{principal.mensagem}"/>
 </h:body>
 </html>
