--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,16 +21,11 @@
                columnVisibility="true"
                copy="true"
                print="true">
-        <b:dataTableColumn label="Coluna 1">
-        </b:dataTableColumn>
-        <b:dataTableColumn label="Coluna 2">
-        </b:dataTableColumn>
-        <b:dataTableColumn label="Coluna 3">
-        </b:dataTableColumn>
-        <b:dataTableColumn label="Coluna 4">
-        </b:dataTableColumn>
-        <b:dataTableColumn label="Coluna 5">
-        </b:dataTableColumn>
+        <b:dataTableColumn label="Coluna 1"/>        
+        <b:dataTableColumn label="Coluna 2"/>
+        <b:dataTableColumn label="Coluna 3"/>
+        <b:dataTableColumn label="Coluna 4"/>
+        <b:dataTableColumn label="Coluna 5"/>
     </b:dataTable>
 </h:body>
 </html>
